fix banner-area height

--- a/index.html
+++ b/index.html
@@ -80,24 +80,26 @@
 			</section>
 		<!-- End Header Area -->
 		<!-- Start Banner Area -->
-		<section class="banner-area start-banner-container">
-			<div id="particles-js"></div>
-			<div class="container relative ">
-				<div class="row fullscreen justify-content-center align-items-center text-center">
-					<div class="col-lg-8">
-						<div class="banner-content text-center">
-							<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
-							<p class="text-center-main">We are an Amazing Innovation and Mentoring Team
-								<br>Ready to bring your Software/Digital 
-								<br>Ideas to the Real World
-							</p>
-						</div>
-						<div class="buttons-start ">
-							<a href="#" class="primary-btn banner-btn-b">Why Us ?</a>
-							<a href="#" class="primary-btn banner-btn">Our Services</a>
+		<section class="banner-area"> 
+			<div class="start-banner-container">
+				<div id="particles-js"></div>
+				<div class="container relative ">
+					<div class="row fullscreen justify-content-center align-items-center text-center">
+						<div class="col-lg-8">
+							<div class="banner-content text-center">
+								<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
+								<p class="text-center-main">We are an Amazing Innovation and Mentoring Team
+									<br>Ready to bring your Software/Digital 
+									<br>Ideas to the Real World
+								</p>
+							</div>
+							<div class="buttons-start ">
+								<a href="#" class="primary-btn banner-btn-b">Why Us ?</a>
+								<a href="#" class="primary-btn banner-btn">Our Services</a>
+							</div>
 						</div>
 					</div>
-				</div>
+			</div>
 			</div>
 			
 		</section>
