--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 						<div class="single-product2 imagenp1">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Unique Design</h4>
-									<p>Most people who work in an office environment, buy computer products, or have </p>
+									<h4>GameWarrios</h4>
+									<p>Keep you updated about most recent videogame News</p>
 								</div>
 								<div class="icon image1">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -183,8 +183,8 @@
 						<div class="single-product2 imagenp2">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Appropriate UX</h4>
-									<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
+									<h4>K.O</h4>
+									<p>Care Environmental, Animal handle, Renewable Energy</p>
 								</div>
 								<div class="icon image2">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -196,8 +196,8 @@
 						<div class="single-product2 imagenp3">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Perfect Visual</h4>
-									<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
+									<h4>RCU Gym</h4>
+									<p>Your Body is your most important Project. Do you want promote your Gym? Call Us</p>
 								</div>
 								<div class="icon image3">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -211,8 +211,8 @@
 						<div class="single-product2 imagenp4">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Unique Design</h4>
-									<p>Most people who work in an office environment, buy computer products, or have </p>
+									<h4>SWIMERSX</h4>
+									<p>Some of our favorite Sports is SWINGMING, do you want promote a SWIMING Academy ? </p>
 								</div>
 								<div class="icon image4">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -224,8 +224,8 @@
 						<div class="single-product2 imagenp5">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Appropriate UX</h4>
-									<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
+									<h4>ASANA</h4>
+									<p>Yoga Fan or Expert Academy Owner ? We can create your branding, Social Medina and Website</p>
 								</div>
 								<div class="icon image5">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -237,8 +237,8 @@
 						<div class="single-product2 imagenp6">
 							<div class="single-product1">
 								<div class="desc">
-									<h4>Perfect Visual</h4>
-									<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
+									<h4>Health Check Monitoring</h4>
+									<p>Internet of things combined with Medical getting amazing Results</p>
 								</div>
 								<div class="icon image6">
 									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
@@ -282,13 +282,13 @@
 					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
-								<img src="img/84px/íconos RCU-08.png" alt="fifth_services_icon">
+								<img src="img/84px/íconos RCU-04.png" alt="first_services_icon">
 							</div>
 							<div class="desc">
-								<h4 class="our-services-title">Innovation</h4>
-								<p class="our-services-text">For good ideas and true innovation, you need human interaction, conflict, argument, debate.
-
-									Margaret Heffernan</p>
+								<h4 class="our-services-title">Web Development</h4>
+								<p class="our-services-text">A Great Business start with a A great website 
+									that can be accessed from anywhere in the world 
+								</p>
 							</div>
 						</div>
 					</div>
@@ -322,23 +322,22 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">Mentoring</h4>
-								<p class="our-services-text">Do you have the next Million Dollars Idea?
+								<p class="our-services-text">
 									 Are you looking for a Great Technology Team? We have the Infrastructure
 									  and Software knowledge that you Need!
 								</p>
 							</div>
 						</div>
 					</div>
+					
 					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
-								<img src="img/84px/íconos RCU-04.png" alt="first_services_icon">
+								<img src="img/84px/íconos RCU-08.png" alt="fifth_services_icon">
 							</div>
 							<div class="desc">
-								<h4 class="our-services-title">Web Development</h4>
-								<p class="our-services-text">A Great Business start with a A great website 
-									that can be accessed from anywhere in the world 
-								</p>
+								<h4 class="our-services-title">Innovation</h4>
+								<p class="our-services-text"></p>
 							</div>
 						</div>
 					</div>
@@ -377,9 +376,6 @@
 					<div class="slider1">
 						<div class="element-1">
 							<img src="./img/slider/slide-1.png" alt="">
-						</div>
-						<div class="element-2">
-							<img src="./img/slider/slide-2.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -448,7 +444,7 @@
 					<div class="single-pricing-table">
 						<div class="top">
 							<div class="head text-center">
-								<span class="lnr lnr-leaf"></span><br>
+								<span class="lnr lnr-star"></span><br>
 								<h5 class="text-white text-uppercase">Standard</h5>
 							</div>
 							<div class="package text-center">
@@ -473,7 +469,7 @@
 					<div class="single-pricing-table">
 						<div class="top">
 							<div class="head text-center">
-								<span class="lnr lnr-diamond"></span><br>
+								<span class="lnr lnr-earth"></span><br>
 								<h5 class="text-white text-uppercase">Business</h5>
 							</div>
 							<div class="package text-center">
@@ -499,7 +495,7 @@
 					<div class="single-pricing-table">
 						<div class="top">
 							<div class="head text-center">
-								<span class="lnr lnr-apartment"></span>
+								<span class="lnr lnr-rocket"></span>
 								<h5 class="text-white text-uppercase">Ultimate</h5>
 							</div>
 							<div class="package text-center">
@@ -794,80 +790,7 @@
 		
 		<!-- End Testimonial Area -->
 		<!-- Start Publish Area -->
-		<section id="blog" class="section-full">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-8">
-						<div class="product-area-title text-center">
-							<p class="text-uppercase">Latest From Blog</p>
-							<h2 class="h1">Publish what you want to <br> not requires social</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-3 col-md-6">
-						<div class="single-publish">
-							<img src="img/p1.jpg" class="img-fluid" alt="">
-							<div class="top">
-								<div class="mb-15 d-flex">
-									<a href="#">25 October, 2017</a>
-									<span class="line">|</span>
-									<a href="#">By Mark Wiens</a>
-								</div>
-								<h6 class="text-uppercase"><a href="#">Addiction When Gambling Becomes A Problem</a></h6>
-							</div>
-							<p class="mb-30">Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front of their </p>
-							<a href="#" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="single-publish">
-							<img src="img/p2.jpg" class="img-fluid" alt="">
-							<div class="top">
-								<div class="mb-15 d-flex">
-									<a href="#">25 October, 2017</a>
-									<span class="line">|</span>
-									<a href="#">By Mark Wiens</a>
-								</div>
-								<h6 class="text-uppercase"><a href="#">Computer Hardware Desktops And Notebooks </a></h6>
-							</div>
-							<p class="mb-30">Ah, the technical interview. Nothing like it. Not only does it cause anxiety, but it causes anxiety for several different reasons. </p>
-							<a href="#" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="single-publish">
-							<img src="img/p3.jpg" class="img-fluid" alt="">
-							<div class="top">
-								<div class="mb-15 d-flex">
-									<a href="#">25 October, 2017</a>
-									<span class="line">|</span>
-									<a href="#">By Mark Wiens</a>
-								</div>
-								<h6 class="text-uppercase"><a href="#">Make Myspace Your Best Designed Space</a></h6>
-							</div>
-							<p class="mb-30">Plantronics with its GN Netcom wireless headset creates the next generation of wireless headset and other products such as wireless </p>
-							<a href="#" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="single-publish">
-							<img src="img/p4.jpg" class="img-fluid" alt="">
-							<div class="top">
-								<div class="mb-15 d-flex">
-									<a href="#">25 October, 2017</a>
-									<span class="line">|</span>
-									<a href="#">By Mark Wiens</a>
-								</div>
-								<h6 class="text-uppercase"><a href="#">Video Games Playing With Imagination</a></h6>
-							</div>
-							<p class="mb-30">About 64% of all on-line teens say that do things online that they wouldn’t want their parents to know about.   11% of all adult internet </p>
-							<a href="#" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+		
 		<!-- End Publish Area -->
 		<!-- Start Contact Area -->
 		<section id="contact" class="section-full gray-bg">
@@ -889,7 +812,7 @@
 					<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 						<div class="text-center">
 							<img src="./img/contact us/íconos contacto-02.png" alt="second_contact_icon"/>
-							<h3 class="mt-4">contact@rcudev.com</h3>
+							<h3 class="mt-4">contact<br>@rcudevelopment.com</h3>
 							<div class="contact-us-line mt-4"></div>
 						</div>
 					</div>
@@ -966,7 +889,7 @@
 					<p class="text-center">RCU Development &copy; 2019. All rights reserved. Website development by RCU Development. Template by <a href="https://colorlib.com/wp" target="_blank" rel="noopener noreferrer">Colorlib</a>.</p>
 				</div>
 				<div class="footer-links">
-						<a href="#">Privacy Politics</a>
+						<a href="privacypolicy.html" target="_blank">Privacy Politics</a>
 						<a href="#">Legal Terms</a>
 						<a href="#">Cookies politics</a>
 						<a href="#">Credits</a>
