Prod Ready Changes
Adding G Analytics
BackupTeam
Mail function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<title>Innovation Team</title>
 
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+
+
 	<!--
 		CSS
 		============================================= -->
@@ -27,6 +29,15 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bxslider.min.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160709982-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160709982-1');
+</script>
 </head>
 
 <body>
@@ -574,264 +585,7 @@
 	<div id="filter-content"></div>
 
 	<!-- End shuffle Area -->
-	<!-- Start Team member Area -->
-	<section id="team" class="pb-150">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-8">
-					<div class="product-area-title text-center">
-						<p class="text-uppercase">Innovation Team</p>
-						<h2 class="h1">Team work builds trust and <br> trust builds growth</h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Yisus.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/yisusvii" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/yisusvii" target="_blank"><i
-											class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Jesus Medina</a></h5>
-							<p>Sr Team Manager</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Yissel.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/yisspiix3" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/yisselmar%C3%ADnlombard" target="_blank"><i
-											class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Yissel Marín</a></h5>
-							<p>UI/UX Design Manager</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Eli.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/Etaboada95/" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/eli-taboada-rojas-a97367128/"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Elí Taboada</a></h5>
-							<p>Development Teach Lead</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Ron.pnG);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/Ronaldo-Kadenasty" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/ronaldo-rodriguez-gamboa-b73550194"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Ronaldo Rodriguez</a></h5>
-							<p>MBA and BRM </p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Fer.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/Chaan25" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/fernando-p%C3%A9rez-b00154168"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Fernando Contreras</a></h5>
-							<p>DevOps TechLead</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Katia.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/KattiaOlmedo27" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="http://linkedin.com/in/katia-olmedo-5848a1141" target="_blank"><i
-											class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Katia Olmedo</a></h5>
-							<p>Scrum Master and AppDev</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Marco.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/marcohesa" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/marco-antonio-hernández-salas-583174172/"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Marco Hernández</a></h5>
-							<p>Developer Backend Specialist</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Saulo.png);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/Saulo-Colorado" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/saulo-colorado-vasquez-157967171/"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Saulo Colorado</a></h5>
-							<p>DevOps Specialist</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Rafa.jpg);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/schezrafael" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/schezrafael/" target="_blank"><i
-											class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Rafael Fernandez</a></h5>
-							<p>Developer Front End Specialist</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Cesar.jpg);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="#" target="_blank"><i class="fa fa-github"></i></a>
-									<a href="http://linkedin.com/in/cesar-ulises-chavarria-tableros-816999178/"
-										target="_blank"><i class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Cesar Chavarria</a></h5>
-							<p>Sr Java Architect</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/Saul.jpg);">
-							<div
-								class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<div class="social d-flex align-items-center justify-content-center">
-									<a href="https://github.com/SMontero90" target="_blank"><i
-											class="fa fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/saulmontero495254b6" target="_blank"><i
-											class="fa fa-linkedin"></i></a>
-								</div>
-								<div class="line"></div>
-								<div class="social d-flex align-items-center justify-content-center">
-								</div>
-							</div>
-						</div>
-						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Saul Montero</a></h5>
-							<p>Sr Frond-End Manager</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Team member Area -->
-
+	
 
 
 	<!-- Start Testimonial Area -->
@@ -860,7 +614,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<div class="text-center">
 						<img src="./img/contact us/íconos contacto-02.png" alt="second_contact_icon" />
-						<h3 class="mt-4">contact<br>@rcudevelopment.com</h3>
+						<h3 class="mt-4">contact<br>@rcu-development.com</h3>
 						<div class="contact-us-line mt-4"></div>
 					</div>
 				</div>
