--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><a class="nav-link nav-s" href='#about'>About</a></li>
 						<li><a class="nav-link nav-s" href='#portfolio'>Portfolio</a></li>
 						<li><a class="nav-link nav-s" href='#services'>Services</a></li>
-						<li><a class="nav-link nav-s" href='#team'>Team</a></li>
+						<!--li><a class="nav-link nav-s" href='#team'>Team</a></li-->
 						<div class="btn-group">
 							<button type="button" class="nav-link nav-s btnlink dropdown-toggle" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">
@@ -104,15 +104,15 @@
 						<div class="banner-content text-center" style="color:white">
 							<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
 							<p class="text-center-main">
-								<h1 style="color:white">Innovation and Trainning Center</h1>
+								<h1 style="color:white">Innovation and Training Center</h1>
 								<br>Cloud Computing, DevOps, Software Development and Systems Design
 								<br> Support and Migration of
 								Legacy Systems
 							</p>
 						</div>
 						<div class="buttons-start ">
-							<a href="#" class="primary-btn banner-btn-b">Why Us ?</a>
-							<a href="#" class="primary-btn banner-btn">Our Services</a>
+							<a href="#whyus" class="primary-btn banner-btn-b">Why Us ?</a>
+							<a href="#services" class="primary-btn banner-btn">Our Services</a>
 						</div>
 					</div>
 				</div>
@@ -140,7 +140,7 @@
 						<div class="desc">
 							<h4 class="welcome-title">Innovation</h4>
 							<p class="welcome-text">Products always at the forefront</p>
-							<a class="welcome-text" href="url">READ MORE>></a>
+							<a class="welcome-text" href="#">READ MORE>></a>
 						</div>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 						<div class="desc">
 							<h4 class="welcome-title">Engineering</h4>
 							<p class="welcome-text">Amazing teams creating Amazing Products</p>
-							<a class="welcome-text" href="url">READ MORE>></a>
+							<a class="welcome-text" href="#">READ MORE>></a>
 						</div>
 					</div>
 				</div>
@@ -164,7 +164,7 @@
 						<div class="desc">
 							<h4 class="welcome-title">Research</h4>
 							<p class="welcome-text">Our Focus: Outer Space & Environmental Care</p>
-							<a class="welcome-text" href="url">READ MORE>></a>
+							<a class="welcome-text" href="#">READ MORE>></a>
 						</div>
 					</div>
 				</div>
@@ -216,7 +216,7 @@
 						<div class="single-product1">
 							<div class="desc">
 								<h4>RCU Gym</h4>
-								<p>Your Body is your most important Project. Do you want promote your Gym? Call Us</p>
+								<p>Your Body is your most important Project. Do you want to promote your Gym? Call Us</p>
 							</div>
 							<div class="icon image3">
 								<button type="button" class="btn btn-info masinfo" data-toggle="modal"
@@ -232,7 +232,7 @@
 						<div class="single-product1">
 							<div class="desc">
 								<h4>SWIMERSX</h4>
-								<p>Some of our favorite Sports is SWINGMING, do you want promote a SWIMING Academy ?
+								<p>One of our favorite Sport is SWINGMING, do you want promote a SWIMING Academy?
 								</p>
 							</div>
 							<div class="icon image4">
@@ -247,8 +247,7 @@
 						<div class="single-product1">
 							<div class="desc">
 								<h4>ASANA</h4>
-								<p>Yoga Fan or Expert Academy Owner ? We can create your branding, Social Medina and
-									Website</p>
+								<p>Yoga Fan or Expert Academy Owner ? We can create your branding, Social Media and Website</p>
 							</div>
 							<div class="icon image5">
 								<button type="button" class="btn btn-info masinfo" data-toggle="modal"
@@ -262,7 +261,7 @@
 						<div class="single-product1">
 							<div class="desc">
 								<h4>Health Check Monitoring</h4>
-								<p>Internet of things combined with Medical getting amazing Results</p>
+								<p>Internet of things combined with Medicine getting amazing Results</p>
 							</div>
 							<div class="icon image6">
 								<button type="button" class="btn btn-info masinfo" data-toggle="modal"
@@ -315,7 +314,7 @@
 							<p class="our-services-text">
 								<ul class="our-services-text">
 									<li>Creating Solutions with Top Technologies</li>
-									<li>Helping Companies migrate Old Software Products</li>
+									<li>Helping Companies to migrate Old Software Products</li>
 
 								</ul>
 							</p>
@@ -330,8 +329,7 @@
 						</div>
 						<div class="desc">
 							<h4 class="our-services-title">Graphic design</h4>
-							<p class="our-services-text">Our graphic design skills are superior to a lot of other
-								things We can do; We use it as a part of Our tool kit.</p>
+							<p class="our-services-text">Our graphic design skills are superior to a lot of other things We can do; We use it as a part of Our tool kit.</p>
 						</div>
 					</div>
 				</div>
@@ -373,10 +371,10 @@
 	</section>
 	<!--End Our Services Area-->
 	<!-- Start Why Us Area -->
-	<section class="container slider-container">
+	<section id="whyus" class="container slider-container">
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
-				<h1 class="section-slider-title">¿Why Us?</h2>
+				<h1 class="section-slider-title">Why Us?</h2>
 					<p>This team is in the limits of the Galaxy, always generating innovative ideas, participating in
 						technological competitions and keeping up to date on topics of Technology and Innovation.</p>
 
@@ -456,7 +454,7 @@
 				<div class="col-lg-8">
 					<div class="product-area-title text-center">
 						<p class="text-uppercase">Biz With Us</p>
-						<h2 class="h1">Lets Colaborate with the Next Million Dollar Business<br> Or Lets Save the World
+						<h2 class="h1">Let's Colaborate with the Next Million Dollar Business<br> Or Let's Save the World
 						</h2>
 					</div>
 				</div>
@@ -478,12 +476,12 @@
 						<div class="bottom text-center">
 							<ul class="feature text-center">
 								<li>Mentoring IT and Software</li>
-								<li>Trainning Data-Driven Desitions</li>
+								<li>Training Data-Driven Desitions</li>
 								<li>Environmental Care Projects</li>
 								<li>Medical Software Projects</li>
 								<li>Outer Space Software Innovation</li>
 							</ul>
-							<a href="#" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
+							<a href="#contact" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
 								RCU<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
@@ -503,14 +501,14 @@
 
 						<div class="bottom text-center">
 							<ul class="feature text-center">
-								<li>Software Migration Estragetigies</li>
-								<li>Innovation and Cloud Computing Trainning</li>
-								<li>Software Developing Trainning</li>
-								<li>DevOps Trainning</li>
+								<li>Software Migration Strategies</li>
+								<li>Innovation and Cloud Computing Training</li>
+								<li>Software Developing Training</li>
+								<li>DevOps Training</li>
 								<li>Project Agile Estimations</li>
 								<li>CI/CD/CD Culture</li>
 							</ul>
-							<a href="#" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
+							<a href="#contact" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
 								RCU<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
@@ -535,7 +533,7 @@
 								<li>Branding and Social Media</li>
 								<li>Environmental Care & Animal Care</li>
 							</ul>
-							<a href="#" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
+							<a href="#contact" class="primary-btn text-uppercase d-inline-flex align-items-center">Contact
 								RCU<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
@@ -553,20 +551,15 @@
 				<div class="col-xs-12">
 					<div class="slider2">
 						<div class="slide2-element text-center">
-							<q>Technology is nothing. What's important is that you have a faith in people, that they're
-								basically good and smart,
-								and if you give them tools, they'll do wonderful things with them.</q>
+							<q>Technology is nothing. What's important is that you have a faith in people, that they're basically good and smart, and if you give them tools, they'll do wonderful things with them.</q>
 							<p class="author">- Steve Jobs</p>
 						</div>
 						<div class="slide2-element text-center">
-							<q>Technology is just a tool. In terms of getting the kids working together and motivating
-								them,
-								the teacher is the most important.</q>
+							<q>Technology is just a tool. In terms of getting the kids working together and motivating them, the teacher is the most important.</q>
 							<p class="author">- Bill Gates</p>
 						</div>
 						<div class="slide2-element text-center">
-							<q>Great industries are never made from single companies. There is room in space for a lot
-								of winners.</q>
+							<q>Great industries are never made from single companies. There is room in space for a lot of winners.</q>
 							<p class="author">- Jeff Bezos</p>
 						</div>
 					</div>
@@ -686,7 +679,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="footer-social">
-							<a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/rcudevelopment/"><i class="fa fa-facebook-square fa-3x"></i></a>
 							<a href="#"><i class="fa fa-twitter fa-3x"></i></a>
 							<a href="#"><i class="fa fa-github fa-3x"></i></a>
 						</div>
