--- a/index.html
+++ b/index.html
@@ -599,15 +599,8 @@
 			<div class="row justify-content-center">
 				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 					<div class="text-center">
-						<img src="./img/contact us/íconos contacto-01.png" alt="first_contact_icon" />
-						<h3 class="mt-4">000 000 000</h3>
-						<div class="contact-us-line mt-4"></div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
-					<div class="text-center">
 						<img src="./img/contact us/íconos contacto-02.png" alt="second_contact_icon" />
-						<h3 class="mt-4">contact<br>@rcu-development.com</h3>
+						<h3 class="mt-4">contact<br>@rcudevelopment.com</h3>
 						<div class="contact-us-line mt-4"></div>
 					</div>
 				</div>
@@ -687,7 +680,7 @@
 				</div>
 			</div>
 			<div class="footer-description">
-				<p class="text-center">RCU Development &copy; 2019. All rights reserved. Website development by RCU
+				<p class="text-center">RCU Development &copy; 2021. All rights reserved. Website development by RCU
 					Development. Template by <a href="https://colorlib.com/wp" target="_blank"
 						rel="noopener noreferrer">Colorlib</a>.</p>
 			</div>
